--- a/app/views/emails/report-declined-confirmation.html
+++ b/app/views/emails/report-declined-confirmation.html
@@ -2,7 +2,7 @@
 
 
 
-{% set title = "You declined a report from ((organisation_name))" %}
+{% set title = 'You declined a report from ' + data.organisationName + '' %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
@@ -19,13 +19,14 @@
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
     
-    <p>You have declined a report from ((organisation_name)) to ((fund_name)).</p>
+    <p>You have declined a report from {{ data.organisationName }} to {{ data.fundName }}.</p>
 
     <div class="govuk-inset-text">
       <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
       </div>
 
-    <p>Reason for decline: PLAYBACK THEIR REASON HERE</p>
+    <p><span class="govuk-!-font-weight-bold">Reason for decline:</span><br>
+    {{ data.reportReasonDeclined }}</p>
   
     <p>The reporter has been sent an email which includes the reason you gave for declining the report. They will be able to make any corrections and resend for review.</p>
     
@@ -36,7 +37,7 @@
 
 
 
-    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-declined">Go to email sent to reporter</a></p>
+    <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-declined">Go to email sent to reporter</a></p> -->
   
     <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
 
