--- a/app/views/emails/report-declined.html
+++ b/app/views/emails/report-declined.html
@@ -2,7 +2,7 @@
 
 
 
-{% set title = "Your report for ((fund_name)) has been declined" %}
+{% set title = 'Your report for ' + data.fundName + ' has been declined' %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
@@ -18,7 +18,7 @@
   <div class="govuk-grid-column-two-thirds">
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
-    <p>Your report for ((fund_name)) has been declined by the Section 151 Officer.</p>
+    <p>Your report for {{ data.fundName }} has been declined by the Section 151 Officer.</p>
     <!-- <ul class="govuk-list govuk-list--bullet">
       <li>Kate Harries - Section 151 Officer</li>
       <li>Brian Coult - Chief Finance Officer</li></ul>
@@ -28,7 +28,8 @@
       <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
       </div>
 
-    <p>Reason for decline: PLAYBACK THEIR REASON HERE</p>
+      <p><span class="govuk-!-font-weight-bold">Reason for decline:</span><br>
+      {{ data.reportReasonDeclined }}</p>
 
     <p><a href="#">Sign in to amend the report and resend for review</a></p>
     
