--- a/app/views/emails/report-signed-off-confirmation-reporter.html
+++ b/app/views/emails/report-signed-off-confirmation-reporter.html
@@ -40,7 +40,7 @@
 
 
 
-    
+    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-declined">Report declined  email</a></p>
   
     <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
 
