--- a/app/views/emails/report-signed-off-confirmation.html
+++ b/app/views/emails/report-signed-off-confirmation.html
@@ -2,7 +2,7 @@
 
 
 
-{% set title = "You signed off a report for ((organisation_name))" %}
+{% set title = 'You signed off a report for ' + data.organisationName + '' %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
@@ -19,7 +19,7 @@
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
     
-    <p>You successfully signed off and submitted a report from ((organisation_name)) to ((fund_name)).</p>
+    <p>You successfully signed off and submitted a report from {{ data.organisationName }} to {{ data.fundName }}.</p>
 
     <div class="govuk-inset-text">
       <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
@@ -35,7 +35,7 @@
 
 
 
-    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-signed-off-confirmation-reporter">Go to email to reporter for report signed off</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/project/sign-off/">Return to sign off options</a></p>
   
     <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
 
