removed date not needed

--- a/app/views/user-research/index.html
+++ b/app/views/user-research/index.html
@@ -17,8 +17,8 @@
         <p class="govuk-body">This is the prototype for the Report funding progress (Report) service. The service gives grant recipients a way to report on monitoring and evaluation data. </p>
         <p class="govuk-body">Report aims to replace Submit monitoring and evaluation data (Submit) by iteratively moving away from users inputting information into a spreadsheet to form-based question flows and a task list. </p>
         
-        <h2 class="govuk-heading-m govuk-!-margin-bottom-0">Research flows</h2>
-        <p class="govuk-body-s">Session: 18 July 2024 to 25 July 2024</p>
+        <h2 class="govuk-heading-m">Research flows</h2>
+        
 
 
             <form action="/project/report/check-your-answers" method="post" >                    
