added small logic

--- a/app/views/emails/section151.html
+++ b/app/views/emails/section151.html
@@ -22,7 +22,7 @@
     <p>{{ data.reporterName }} from {{ data.fundName }} has sent you a report to be reviewed.</p>
 
     <div class="govuk-inset-text">
-      <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+      <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
       </div>
 
     
