--- a/app/views/project/report/check-your-answers.html
+++ b/app/views/project/report/check-your-answers.html
@@ -28,7 +28,7 @@
 		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 		
-			<p class="govuk-body">You can now send your report to be reviewed by the Section 151 Officer {{ data.section151Name }}.</p>		
+			<p class="govuk-body">You can now send your report to be reviewed by {{ data.section151Name }} the Section 151 Officer.</p>		
 
 			<!-- <ul class="govuk-list govuk-list--bullet">
 				<li>Kate Harries - Section 151 Officer</li>
