--- a/app/views/emails/report-declined-confirmation.html
+++ b/app/views/emails/report-declined-confirmation.html
@@ -21,12 +21,14 @@
     
     <p>You have declined a report from {{ data.organisationName }} to {{ data.fundName }}.</p>
 
-    <div class="govuk-inset-text">
-      <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
-      </div>
+    
+      <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
+      
 
+      <div class="govuk-inset-text">
     <p><span class="govuk-!-font-weight-bold">Reason for decline:</span><br>
     {{ data.reportReasonDeclined }}</p>
+    </div>
   
     <p>The reporter has been sent an email which includes the reason you gave for declining the report. They will be able to make any corrections and resend for review.</p>
     
