--- a/app/views/emails/report-declined.html
+++ b/app/views/emails/report-declined.html
@@ -24,12 +24,13 @@
       <li>Brian Coult - Chief Finance Officer</li></ul>
      -->
 
-    <div class="govuk-inset-text">
-      <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
-      </div>
-
+    
+      <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
+      
+      <div class="govuk-inset-text">
       <p><span class="govuk-!-font-weight-bold">Reason for decline:</span><br>
       {{ data.reportReasonDeclined }}</p>
+    </div>
 
     <p><a href="#">Sign in to amend the report and resend for review</a></p>
     
