--- a/app/views/emails/report-signed-off-confirmation-reporter.html
+++ b/app/views/emails/report-signed-off-confirmation-reporter.html
@@ -26,9 +26,9 @@
         <li>Brian Coult - Chief Finance Officer</li></ul> -->
       
       <p>It has now been submitted to Pathfinders.</p>
-
+        
       <div class="govuk-inset-text">
-        <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+        <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
         </div>
   
   
