--- a/app/views/emails/report-signed-off-confirmation.html
+++ b/app/views/emails/report-signed-off-confirmation.html
@@ -22,7 +22,7 @@
     <p>You successfully signed off and submitted a report from {{ data.organisationName }} to {{ data.fundName }}.</p>
 
     <div class="govuk-inset-text">
-      <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+      <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
       </div>
 
   
