--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -22,7 +22,7 @@
     <p>Your report for {{ data.fundName }} has been sent to {{ data.section151Name }} for review. </p>
 
     <div class="govuk-inset-text">
-    <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+    <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
     </div>
 
     <h2 class="govuk-heading-m">What happens next</h2>	
