--- a/app/views/project/report/confirmation.html
+++ b/app/views/project/report/confirmation.html
@@ -2,8 +2,8 @@
 
 {% set showBackLink = false %}
 
-{% set pageHeading = "Check your answers" %}
-{% set pageSection = "Submit your report" %}
+{% set pageHeading = "Report sent" %}
+{% set pageSection = "" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -11,18 +11,19 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 
-        {{ govukPanel({
-			titleText: "Report sent",
-			classes: "govuk-!-margin-bottom-5",
-			html: "Reporting period<br><strong>July 2023 to September 2023</strong>"
-		}) }}
+        <div class="govuk-panel govuk-panel--confirmation">
+			<h1 class="govuk-panel__title">{{pageHeading}}</h1>
+			<div class="govuk-panel__body">
+				Reporting period<br><strong> {{data.reportPeriod}} </strong>
+			</div>
+		  </div>
 	
 		<p class="govuk-body">We have sent you a confirmation email.</p>			
 		<h2 class="govuk-heading-m">What happens next</h2>	
 		<p class="govuk-body">{{ data.section151Name }} the Section 151 Officer responsible for signing off your report will have 10 days to review it. </p>
 			
 		<p class="govuk-body">If there are no problems, they can sign off and submit the report. If they have any concerns or need you to correct something, they can decline the report and let you know why. You’ll recieve an email either way.</p>		  		
-		<p><a href="#" class="govuk-link govuk-link--no-visited-state">Return to overview</a></p>
+		<p><a href="#" class="govuk-link govuk-link--no-visited-state">Return to fund</a></p>
 
 		<!-- <p class="govuk-body"><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p> -->
 		<p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-submitted">Report sent emails</a></p>
