--- a/app/views/project/sign-off/confirmation.html
+++ b/app/views/project/sign-off/confirmation.html
@@ -15,11 +15,13 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 
-        {{ govukPanel({
-			titleText: pageHeading,
-			classes: "govuk-!-margin-bottom-5",
-			html: "Reporting period<br><strong>July 2023 to September 2023</strong>"
-		}) }}
+
+		<div class="govuk-panel govuk-panel--confirmation">
+			<h1 class="govuk-panel__title">{{pageHeading}}</h1>
+			<div class="govuk-panel__body">
+				Reporting period<br><strong> {{data.reportPeriod}} </strong>
+			</div>
+		  </div>		          
 	
 
 		{% if data['reportStatus'] == "Declined" %}
