--- a/app/views/emails/report-declined.html
+++ b/app/views/emails/report-declined.html
@@ -43,7 +43,7 @@
 
 
   
-    <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
+    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link" href="/user-research">Return to user research</a></p>
 
 
 
