--- a/app/views/project/report/check-your-answers.html
+++ b/app/views/project/report/check-your-answers.html
@@ -28,7 +28,7 @@
 		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 		
-			<p class="govuk-body">You can now send your report to be reviewed by {{ data.section151Name }} the Section 151 Officer.</p>		
+			<p class="govuk-body">You can now send your report to be reviewed by {{ data.section151Name }}, the Section 151 Officer.</p>		
 
 			<!-- <ul class="govuk-list govuk-list--bullet">
 				<li>Kate Harries - Section 151 Officer</li>
@@ -48,7 +48,7 @@
             		text: "Send report",
 					classes: "govuk-!-margin-top-5"
           		}) }}
-				<a class="govuk-link" href="#">Cancel</a>
+				<!-- <a class="govuk-link" href="#">Cancel</a> -->
         	</div>
 
 		</form>
