back links used for moving navigation

--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -43,7 +43,7 @@
 
 
   
-    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link" href="/emails/report-signed-off-confirmation-reporter">Report signed off email</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link nochevron" href="/emails/report-signed-off-confirmation-reporter">Report signed off email</a></p>
 
 
 
