--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -33,3 +33,12 @@ li.x-govuk-secondary-navigation__list-item {
     float: right;
     margin: 0 0 0 20px;
 }
+
+.govuk-back-link.nochevron::before {
+    border-width: 0;        
+}
+
+.govuk-back-link.nochevron {
+    padding-left: 0;
+    margin-left: 0;    
+}
