--- a/app/views/emails/report-declined-confirmation.html
+++ b/app/views/emails/report-declined-confirmation.html
@@ -38,7 +38,7 @@
 
 
 
-    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link" href="/user-research">Return to user research</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link nochevron" href="/user-research">Return to user research</a></p>
     <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-declined">Go to email sent to reporter</a></p> -->
   
     <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
