--- a/app/views/project/report/confirmation.html
+++ b/app/views/project/report/confirmation.html
@@ -27,7 +27,7 @@
 		<p><a href="#" class="govuk-link govuk-link--no-visited-state">Return to fund</a></p>
 
 		<!-- <p class="govuk-body"><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p> -->
-		<p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link" href="/emails/report-submitted">Report sent emails</a></p>
+		<p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link nochevron" href="/emails/report-submitted">Report sent emails</a></p>
   	</div>  
 </div>
 
