back links used for moving navigation

--- a/app/views/emails/report-signed-off-confirmation-reporter.html
+++ b/app/views/emails/report-signed-off-confirmation-reporter.html
@@ -25,7 +25,7 @@
         <li>Kate Harries - Section 151 Officer</li>
         <li>Brian Coult - Chief Finance Officer</li></ul> -->
       
-      <p>It has now been submitted to Pathfinders.</p>
+      <p>It has now been submitted to {{data.fundName}}.</p>
         
       <div class="govuk-inset-text">
         <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
