back links used for moving navigation

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -42,3 +42,9 @@ li.x-govuk-secondary-navigation__list-item {
     padding-left: 0;
     margin-left: 0;    
 }
+
+
+.email-message {
+    margin-bottom: 30px;
+    border: 1px solid #b1b4b6;
+}
