--- a/app/views/emails/report-signed-off-confirmation-reporter.html
+++ b/app/views/emails/report-signed-off-confirmation-reporter.html
@@ -19,7 +19,7 @@
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
     
-    <p>Your report has been signed off by the Section 151 Officer.</p>
+    <p>Your report has been signed off by {{data.section151Name}}, Section 151 Officer.</p>
       
       <!-- <ul class="govuk-list govuk-list--bullet">
         <li>Kate Harries - Section 151 Officer</li>
