--- a/app/views/emails/report-signed-off-confirmation.html
+++ b/app/views/emails/report-signed-off-confirmation.html
@@ -35,7 +35,7 @@
 
 
 
-    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link nochevron" href="/project/sign-off/">Return to sign off options</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link" href="/project/sign-off/">Return to report sign off options</a></p>
   
     <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/section151">Section 151 email</a></p> -->
 
