--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -52,7 +52,7 @@
 
 
 
-    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link nochevron" href="/emails/report-signed-off-confirmation-reporter">Report signed off email</a></p>
+    <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link nochevron" href="/emails/report-signed-off-confirmation-reporter">Email showing report signed off</a></p>
 
 
 <!--   
