--- a/app/views/emails/report-declined-confirmation.html
+++ b/app/views/emails/report-declined-confirmation.html
@@ -1,5 +1,5 @@
 {% extends "layouts/email.html" %}
-
+{% set serviceName = "" %}
 
 
 {% set title = 'You declined a report from ' + data.organisationName + '' %}
@@ -15,28 +15,53 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-three-quarters">
 
-    <h1 class="govuk-heading-l">{{ title }}</h1>        
-    
-    <p>You have declined a report for {{ data.fundName }}, sent by {{ data.reporterName}} from {{data.organisationName }}.</p>
+
+    <div class="email-message">
+    	<table class="govuk-table email-message-meta">
+        	<tbody>
+				<tr>
+                	<th scope="row">From</th>
+                	<td>Report Funding Progress</td>
+              	</tr>                    
+            	<tr>
+              		<th scope="row">To</th>
+              		<td><span class='placeholder-no-brackets'>{{ data.section151Email}}</span></td>
+            	</tr>          
+          		<tr class="email-message-meta">
+            		<th scope="row">Subject</th>
+            		<td>{{ title }}</td>
+          		</tr>
+        	</tbody>
+      	</table>
+      	<div class="email-message-body">
+          <p>You have declined a report for {{ data.fundName }}, sent by {{ data.reporterName}} from {{data.organisationName }}.</p>
 
     
-      <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
+          <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
+          
+    
+          <div class="govuk-inset-text">
+        <p><span class="govuk-!-font-weight-bold">Reason for decline:</span><br>
+        {{ data.reportReasonDeclined or 'You have rated your delivery RAG rating for the Napton village hall restoration project as Red but your comments do not correspond as you have said that delivery is progressing extremely well. Is this a mistake?'  }}</p>
+        </div>
       
-
-      <div class="govuk-inset-text">
-    <p><span class="govuk-!-font-weight-bold">Reason for decline:</span><br>
-    {{ data.reportReasonDeclined or 'You have rated your delivery RAG rating for the Napton village hall restoration project as Red but your comments do not correspond as you have said that delivery is progressing extremely well. Is this a mistake?'  }}</p>
-    </div>
-  
-    <p>{{ data.reporterName}} has been sent an email which includes the reason you gave for declining the report. They will be able to make any corrections and resend for review.</p>
+        <p>{{ data.reporterName}} has been sent an email which includes the reason you gave for declining the report. They will be able to make any corrections and resend for review.</p>
+        
+        <h2 class="govuk-heading-m">Get help</h2>	
     
-    <h2 class="govuk-heading-m">Get help</h2>	
+        <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
+    
+    
+      	</div>
+    </div> 
 
-    <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
 
 
+    
+    
+    
 
     <p class="govuk-body-s govuk-!-margin-top-9"><a class="govuk-back-link nochevron" href="/user-research">Return to user research</a></p>
     <!-- <p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-declined">Go to email sent to reporter</a></p> -->
