--- a/app/views/emails/report-signed-off-confirmation-reporter.html
+++ b/app/views/emails/report-signed-off-confirmation-reporter.html
@@ -23,17 +23,17 @@
     <div class="email-message">
     	<table class="govuk-table email-message-meta">
         	<tbody>
-				<tr>
-                	<th scope="row">From</th>
-                	<td>Report Funding Progress</td>
+				<tr class="govuk-table__row">
+                	<th class="govuk-table__cell" scope="row">From</th>
+                	<td class="govuk-table__cell">Report Funding Progress</td>
               	</tr>                    
             	<tr>
-              		<th scope="row">To</th>
-              		<td><span class='placeholder-no-brackets'>{{ data.reporterEmail}}</span></td>
+              		<th class="govuk-table__cell" scope="row">To</th>
+              		<td class="govuk-table__cell"><span class='placeholder-no-brackets'>{{ data.reporterEmail}}</span></td>
             	</tr>          
           		<tr class="email-message-meta">
-            		<th scope="row">Subject</th>
-            		<td>{{ title }}</td>
+            		<th class="govuk-table__cell" scope="row">Subject</th>
+            		<td class="govuk-table__cell" >{{ title }}</td>
           		</tr>
         	</tbody>
       	</table>
