--- a/app/views/emails/report-signed-off-confirmation.html
+++ b/app/views/emails/report-signed-off-confirmation.html
@@ -22,16 +22,16 @@
     	<table class="govuk-table email-message-meta">
         	<tbody>
 				<tr>
-                	<th scope="row">From</th>
-                	<td>Report Funding Progress</td>
+                	<th class="govuk-table__cell" scope="row">From</th>
+                	<td class="govuk-table__cell">Report Funding Progress</td>
               	</tr>                    
             	<tr>
-              		<th scope="row">To</th>
-              		<td><span class='placeholder-no-brackets'>{{ data.section151Email}}</span></td>
+              		<th class="govuk-table__cell" scope="row">To</th>
+              		<td class="govuk-table__cell"><span class='placeholder-no-brackets'>{{ data.section151Email}}</span></td>
             	</tr>          
           		<tr class="email-message-meta">
-            		<th scope="row">Subject</th>
-            		<td>{{ title }}</td>
+            		<th class="govuk-table__cell" scope="row">Subject</th>
+            		<td class="govuk-table__cell">{{ title }}</td>
           		</tr>
         	</tbody>
       	</table>
