--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -125,7 +125,7 @@ li.x-govuk-secondary-navigation__list-item {
 .email-message-body {
     width: 100%;
     box-sizing: border-box;
-    padding: 15px 60px 0 60px;
+    padding: 35px 60px 40px 60px;
     margin: 0;
     clear: both;
     position: relative;
