--- a/app/views/emails/report-declined.html
+++ b/app/views/emails/report-declined.html
@@ -15,7 +15,7 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-	<div class="govuk-grid-column-three-quarters">
+	<div class="govuk-grid-column-full">
 
 
     <div class="email-message">
