--- a/app/views/emails/section151.html
+++ b/app/views/emails/section151.html
@@ -50,7 +50,7 @@
       
           <p>Once signed in, you can review the report. If there are no problems, you can sign off the report and submit it to {{ data.fundName }}.</p>
       
-          <p>If there are any issues with the report, you can decline it so {{ data.reporterName }} can correct it and resend. When you decline a report, you’ll be able to explain why and the reporter will be able to make amendments before resending for review.</p>
+          <p>If there are any issues with the report, you can decline it so {{ data.reporterName }} can correct it and resend. When you decline a report, you’ll be able to explain why and {{ data.reporterName }} will be able to make amendments before resending for review.</p>
       
           <p>You need to review the report by {{ data.fundDate }}.</p>
       
