--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -46,7 +46,7 @@
       			<li>sign off the report and submit it to Towns Fund</li>
       			<li>decline the report</li>
     		</ul>    
-    		<p>You’ll be sent an email by 29 July 2024 to let you know the outcome. </p>
+    		<p>You’ll be sent an email to let you know the outcome. </p>
     		<!-- <p>Your report will either be signed off and submitted to {{ data.fundName }} or declined. You’ll be sent an email by {{ data.fundDate }} to let you know the outcome.</p> -->
     		<p>If your report is declined, the email will explain why and you will be able to correct any issues and resend the report for another review.</p>
 
