--- a/app/views/emails/section151.html
+++ b/app/views/emails/section151.html
@@ -49,10 +49,10 @@
           <h2 class="govuk-heading-m">What happens next</h2>	
       
           <p>Once signed in, you can review the report. If there are no problems, you can sign off the report and submit it to {{ data.fundName }}.</p>
+		<p>If there are any issues with the report, you can decline it and explain why. {{ data.reporterName }} will be able to make amendments before resending for review.</p>
+          <!-- <p>If there are any issues with the report, you can decline it so {{ data.reporterName }} can correct it and resend. When you decline a report, you’ll be able to explain why and {{ data.reporterName }} will be able to make amendments before resending for review.</p> -->
       
-          <p>If there are any issues with the report, you can decline it so {{ data.reporterName }} can correct it and resend. When you decline a report, you’ll be able to explain why and {{ data.reporterName }} will be able to make amendments before resending for review.</p>
-      
-          <p>You need to review the report by {{ data.fundDate }}.</p>
+          <p>You need to submit the report by {{ data.fundDate }}.</p>
       
           <p><a href="/sign-in?userType=Section151">Sign in to review the report</a></p>
       
