--- a/app/views/project/pathfinders-report.html
+++ b/app/views/project/pathfinders-report.html
@@ -23,7 +23,7 @@
   			html: html
 		}) }} -->
 
-		<p class="govuk-body govuk-!-margin-bottom-7">Due by 11 August 2024</p>		
+		<p class="govuk-body govuk-!-margin-bottom-7">You will need to send this report for review to {{ data.section151Name }}, Section 151 Officer by {{ data.dueDate }}.</p>		
 	
 		{% include "includes/task-pathfinders.html" %}		
 
