--- a/app/views/project/sign-off/index.html
+++ b/app/views/project/sign-off/index.html
@@ -31,7 +31,7 @@
 
 		
 		<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
-        	<li>sign off the report and submit it to {{ data.fundName }}</li>
+        	<li>sign off the report and submit it to {{ data.fundName }} by {{ data.fundDate }}</li>
 			<li>decline the report and provide a reason why so that {{ data.reporterName }} can amend the report and resend for review</li>
       	</ul>
 
