--- a/app/views/project/report/check-your-answers.html
+++ b/app/views/project/report/check-your-answers.html
@@ -3,7 +3,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "Check your answers" %}
-{% set pageSection = "" %}
+{% set pageSection = "Towns Fund" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -12,29 +12,39 @@
 	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
-		
-<!-- 	
-	<dl class="govuk-summary-list govuk-!-margin-bottom-9">
-		<div class="govuk-summary-list__row">
-			<dt class="govuk-summary-list__key">Option</dt>
-			<dd class="govuk-summary-list__value">Answer given</dd>
-			<dd class="govuk-summary-list__actions"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a></dd>
+
+		<!-- <div class="govuk-inset-text">
+			<p class="govuk-!-font-size-24"><span >Report due by {{ data.fundDate}}</span></p>
 		</div> -->
 		
-	</dl>
+		<!-- 	
+		<dl class="govuk-summary-list govuk-!-margin-bottom-9">
+			<div class="govuk-summary-list__row">
+				<dt class="govuk-summary-list__key">Option</dt>
+				<dd class="govuk-summary-list__value">Answer given</dd>
+				<dd class="govuk-summary-list__actions"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a></dd>
+			</div>
+		</dl> -->		
 
 	<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+		
 		<p class="govuk-body-l">Report would show here for review</p>
 		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-		
-			<p class="govuk-body">You can now send your report to be reviewed by {{ data.section151Name }}, the Section 151 Officer.</p>		
+		<h2 class="govuk-heading-m">Sending your report</h2>
 
-			<!-- <ul class="govuk-list govuk-list--bullet">
+		<p>You can now send your report to be reviewed by {{ data.section151Name }}, Section 151 officer. They will need to submit the report to Towns Fund by {{ data.fundDate }}.</p>
+			<!-- <p class="govuk-body">
+				
+				
+				You can now send your report to be reviewed by {{ data.section151Name }}, the Section 151 Officer.</p>		
+
+			<ul class="govuk-list govuk-list--bullet">
 				<li>Kate Harries - Section 151 Officer</li>
-				<li>Brian Coult - Chief Finance Officer</li></ul>
+				<li>Brian Coult - Chief Finance Officer</li></ul> -->
 	
-			 -->
+			
 
 		<p class="govuk-body">We will send an email to let them know that the report is ready to be reviewed.</p>	
 	
@@ -44,8 +54,13 @@
 			<input type="hidden" name="reportStatus" id="reportStatus" value="Sent" />
         
 			<div class="govuk-button-group">
-        		{{ govukButton({
+        		<!-- {{ govukButton({
             		text: "Send report",
+					classes: "govuk-!-margin-top-5"
+          		}) }} -->
+
+				  {{ govukButton({
+            		text: "Send report for review",
 					classes: "govuk-!-margin-top-5"
           		}) }}
 				<!-- <a class="govuk-link" href="#">Cancel</a> -->
