--- a/app/views/emails/report-signed-off-confirmation.html
+++ b/app/views/emails/report-signed-off-confirmation.html
@@ -47,7 +47,7 @@
           
           <h2 class="govuk-heading-m">Get help</h2>	
       
-          <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
+          <p>If you have any questions or need help, email us at <a href="mailto:fsd.support@communities.gov.uk">fsd.support@communities.gov.uk</a>.</p>
       
     
       	</div>
