--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -51,7 +51,7 @@
     		<p>If your report is declined, the email will explain why and you will be able to correct any issues and resend the report for another review.</p>
 
     		<h2 class="govuk-heading-m">Get help</h2>	
-			<p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
+			<p>If you have any questions or need help, email us at <a href="mailto:fsd.support@communities.gov.uk">fsd.support@communities.gov.uk</a>.</p>
     
       	</div>
     </div> 
