--- a/app/views/emails/section151.html
+++ b/app/views/emails/section151.html
@@ -38,7 +38,7 @@
       	<div class="email-message-body">
    
     
-          <p>{{ data.reporterName }} from {{ data.fundName }} has sent you a report to be reviewed.</p>
+          <p>{{ data.reporterName }} from {{ data.organisationName }} has sent you a report to be reviewed.</p>
 
           <div class="govuk-inset-text">
             <p>Reporting period: <strong>{{ data.reportPeriod }}</strong></p>
@@ -58,7 +58,7 @@
       
           <h2 class="govuk-heading-m">Get help</h2>	
       
-          <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
+          <p>If you have any questions or need help, email us at <a href="mailto:fsd.support@communities.gov.uk">fsd.support@communities.gov.uk</a>.</p>
          
     
       	</div>
