small tweaks to listings

--- a/app/views/project/sign-off/index.html
+++ b/app/views/project/sign-off/index.html
@@ -5,14 +5,14 @@
 {% endif %}
 
 {% set pageHeading = "Sign off and submit report" %}
-{% set pageSection = "" %}
+{% set pageSection = "Towns Fund" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
 
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
-
+		
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
       	<p class="govuk-body">{{ data.reporterName }} has completed a report ready for your review.</p>
